--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">BAYU_1202154127_MODUL6</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="judul_spinner">Pilih Kategori</string>
+    <string-array name="kategori">
+        <item>Pilih Kategori</item>
+        <item>Event</item>
+        <item>Kompetisi</item>
+        <item>Jual Beli</item>
+    </string-array>
 </resources>
